fixed social media text align center

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ a:hover {
 
 .social_media_text {
   margin-top: 0px;
+  text-align: center;
 }
 /*
 ul {
